<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".annonces.AddAnnonceActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_margin"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:cardCornerRadius="@dimen/default_margin"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/add_lieu_page_upload_button"
                    style="@style/TitleTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/themeColor"
                    android:padding="@dimen/default_margin"
                    android:text="@string/add_lieu_page_upload_button"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/previewImage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/house" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/add_lieu_page_Category_input"
                    style="@style/DefaultTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="@dimen/item_marin"
                    android:entries="@array/add_lieu_page_Category_input"
                    android:paddingLeft="@dimen/default_margin"
                    android:spinnerMode="dropdown" />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_lieu_page_title_lieu_input"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/black">

                    <EditText
                        android:id="@+id/add_lieu_page_title_lieu_input"
                        style="@style/DefaultTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginTop="@dimen/item_marin"
                        android:inputType="text"
                        android:paddingLeft="@dimen/default_margin" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_lieu_page_title_description_input"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/black">

                    <EditText
                        android:id="@+id/add_lieu_page_description_input"
                        style="@style/DefaultTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginTop="@dimen/item_marin"
                        android:inputType="text"
                        android:paddingLeft="@dimen/default_margin" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_lieu_page_title_lieu_price_input"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/black">

                    <EditText
                        android:id="@+id/add_lieu_page_price_input"
                        style="@style/DefaultTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginTop="@dimen/item_marin"
                        android:inputType="text"
                        android:paddingLeft="@dimen/default_margin" />
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/add_lieu_page_TypeTarification_input"
                    style="@style/DefaultTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="@dimen/item_marin"
                    android:entries="@array/add_lieu_page_title_lieu_TypeTarification_input"
                    android:paddingLeft="@dimen/default_margin"
                    android:spinnerMode="dropdown" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_lieu_page_title_lieu_adresse_input"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/black">

                    <EditText
                        android:id="@+id/add_lieu_page_adresse_input"
                        style="@style/DefaultTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginTop="@dimen/item_marin"
                        android:inputType="text"
                        android:paddingLeft="@dimen/default_margin" />
                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/surfaceTV"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Surface"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/black">

                    <EditText
                        android:id="@+id/add_lieu_page_surface_input"
                        style="@style/DefaultTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginTop="@dimen/item_marin"
                        android:inputType="text"
                        android:paddingLeft="@dimen/default_margin" />
                </com.google.android.material.textfield.TextInputLayout>




                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/NbChTv"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_lieu_page_title_lieu_nbrChambre_input"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/black">

                    <EditText
                        android:id="@+id/add_lieu_page_nbrChambre_input"
                        style="@style/DefaultTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginTop="@dimen/item_marin"
                        android:inputType="text"
                        android:paddingLeft="@dimen/default_margin" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/NbEtTv"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_lieu_page_title_lieu_nbrEtages_input"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/black">

                    <EditText
                        android:id="@+id/add_lieu_page_nbrEtages_input"
                        style="@style/DefaultTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginTop="@dimen/item_marin"
                        android:inputType="text"
                        android:paddingLeft="@dimen/default_margin" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/ajouter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Ajouter"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/themeColor"/>
            </LinearLayout>
        </ScrollView>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>